<resources>
    <string name="app_name">NAU课程表</string>
    <string name="app_description">南京审计大学非官方开源课程表</string>
    <string name="welcome_app">欢迎使用NAU课程表</string>
    <string name="login_to_continue">登录以继续操作</string>
    <string name="user_id">用户ID：</string>
    <string name="user_password">密码：</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="find_password">找回密码</string>
    <string name="forget_password_help">\u3000\u3000NAU课程表使用SSO(统一身份认证登录)登录，因此您应该使用SSO的密码进行登录。\n\u3000\u3000如果您已经忘记密码或不知道应该使用哪个密码，您可以点击"找回密码"前往网页登录页面，点击找回密码即可进行密码重置申请。</string>
    <string name="read_and_accept">我已阅读并同意</string>
    <string name="eula_license">使用协议</string>
    <string name="application_launch_failed">相关应用启动失败！</string>
    <string name="login_info_empty">请输入用户名或密码！</string>
    <string name="server_error">服务器错误！</string>
    <string name="connection_error">网络连接时出错！</string>
    <string name="eula_not_accept">您还没有同意使用协议！</string>
    <string name="already_login">您当前已登录教务，请十分钟后重试！</string>
    <string name="unknown_error">未知错误！</string>
    <string name="password_error">用户名或密码错误！</string>
    <string name="account_lock_error">账户被锁定！</string>
    <string name="input_error">输入错误！</string>
    <string name="is_logging">登录SSO中</string>
    <string name="is_logging_jwc">登录教务中</string>
    <string name="is_caching">正在缓存初始数据中</string>
    <string name="drawer_layout_open">打开侧边抽屉</string>
    <string name="drawer_layout_close">关闭侧边抽屉</string>
    <string name="settings">设置</string>
    <string name="exit">退出</string>
    <string name="balance">余额：%1$s</string>
    <string name="user_info">个人信息</string>
    <string name="course_table">课程表</string>
    <string name="today_course">今日课程</string>
    <string name="news">校内通知</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="month">%1$d月</string>
    <string name="today_date">%1$d月%2$d日</string>
    <string name="week_num">第%1$d周</string>
    <string name="not_current_week">非本周</string>
    <string name="not_current_week_course">[非本周]</string>
    <string name="in_vacation">放假中</string>
    <string name="data_empty">当前暂无数据</string>
    <string name="news_type">类别：%1$s</string>
    <string name="news_click_amount">点击：%1$d</string>
    <string name="news_source_jwc">教务系统</string>
    <string name="news_source_rss_jw">教务委员会</string>
    <string name="news_source_rss_tw">团务委员会</string>
    <string name="news_source_rss_xxb">信息化办公室</string>
    <string name="news_source_rss_xgc">学务委员会</string>
    <string name="content_error_timeout">请求超时！</string>
    <string name="content_error_operation">数据处理错误！</string>
    <string name="content_error_parse_failed">数据转换错误！</string>
    <string name="content_error_empty_data">暂无可用数据</string>
    <string name="news_show_type">显示的通知类别</string>
    <string name="course_id">ID：%1$s</string>
    <string name="course_teacher">教师：%1$s</string>
    <string name="course_class">班级：%1$s</string>
    <string name="course_credit">学分：%1$.2f</string>
    <string name="course_type">类型：%1$s</string>
    <string name="course_location">地点：%1$s</string>
    <string name="course_time">时间：%1$s 周%2$s %3$s</string>
    <string name="news_detail_info">发布：%1$s</string>
    <string name="news_detail_info_with_click_amount">发布：%1$s 浏览量：%2$d</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="user_info_base">基础信息</string>
    <string name="user_info_learning_process">修学进度</string>
    <string name="user_info_credit_info">学分信息</string>
    <string name="user_info_rank_info">排名信息</string>
    <string name="learning_process_target_credit">目标学分：%1$.2f</string>
    <string name="learning_process_revised_credit">已修学分：%1$.2f</string>
    <string name="learning_process_balance_credit">学分差额：%1$.2f</string>
    <string name="learning_process_bonus_credit">奖励学分：%1$.2f</string>
    <string name="course_type_compulsory">必修课</string>
    <string name="course_type_major_selective">专选课</string>
    <string name="course_type_optional">任选课</string>
    <string name="course_type_practical">实践课</string>
    <string name="about">关于</string>
    <string name="license">协议</string>
    <string name="open_source_license">开源协议</string>
    <string name="version">版本</string>
    <string name="version_detail">v%1$s (%2$d)</string>
    <string name="version_detail_debug">v%1$s-debug (%2$d)</string>
    <string name="open_source_website">开源网站</string>
    <string name="open_source_website_url" translatable="false">https://xfy9326.github.io/NauCourse/</string>
    <string name="developer">开发者</string>
    <string name="author_title">作者</string>
    <string name="author" translatable="false">逸雪飞扬 (XFY9326)</string>
    <string name="email_title">邮箱</string>
    <string name="email" translatable="false">17013209@stu.nau.edu.cn</string>
    <string name="today_course_data_empty">课程数据为空！</string>
    <string name="today_course_loading">课程数据正在加载中！</string>
    <string name="today_course_no_course">今日暂无课程</string>
    <string name="term">%1$d-%2$d 第%3$d学期</string>
    <string name="feedback">问题反馈</string>
    <string name="online_feedback_back">在线反馈</string>
    <string name="online_feedback_back_sum">反馈服务由腾讯兔小巢提供</string>
    <string name="qq_group_title">QQ反馈群</string>
    <string name="qq_group" translatable="false">704668624</string>
    <string name="no_next_course">今日已无待上课程</string>
    <string name="no_today_course">今日无课程</string>
    <string name="no_tomorrow_course">明日无课程</string>
    <string name="tomorrow_course">明日课程</string>
    <string name="course_arrange">课程安排</string>
    <string name="not_this_week_course">非本周课程</string>
    <string name="no_not_this_week_course">无非本周课程</string>
    <string name="course_simple_time">周%1$s %2$s %3$s</string>
    <string name="logout">注销</string>
    <string name="logout_msg">您是否确定要继续注销登录并清空所有用户数据？</string>
    <string name="course_manage">课程管理</string>
    <string name="course_and_term_data_empty">课程与学期数据均为空！</string>
    <string name="share_image">分享图片</string>
    <string name="save_image">保存图片到本地</string>
    <string name="image_save_success">图片保存成功！</string>
    <string name="image_save_failed">图片保存失败！</string>
    <string name="image_share_failed">图片分享失败！</string>
    <string name="share_news">分享通知</string>
    <string name="news_share_text">%1$s\n%2$s</string>
    <string name="news_share_text_with_type">[%1$s] %2$s\n%3$s</string>
    <string name="delete_course_success">删除课程成功！</string>
    <string name="revoke">撤销</string>
    <string name="course_color_edit">课程颜色编辑</string>
    <string name="course_edit">课程编辑</string>
    <string name="course_edit_failed">课程编辑时出现错误！</string>
    <string name="course_name">课程名称：</string>
    <string name="teacher_name">教师 (可选)：</string>
    <string name="teach_class_name">教学班 (可选)：</string>
    <string name="course_class_name">合班号 (可选)：</string>
    <string name="course_credit_name">学分 (可选)：</string>
    <string name="type_name">类型 (可选)：</string>
    <string name="property_name">性质 (可选)：</string>
    <string name="course_detail_empty">课程详细信息为空\n请至少添加一条信息</string>
    <string name="base_course_info">基础信息</string>
    <string name="course_detail_title">课程时间</string>
    <string name="course_detail_weeks">周数：%1$s</string>
    <string name="course_detail_time">时间：周%1$s %2$s</string>
    <string name="course_detail_location">地点：%1$s</string>
    <string name="delete_course_time_success">删除课程时间成功！</string>
    <string name="course_time_edit">课程时间编辑</string>
    <string name="course_location_name">课程地点（可选）：</string>
    <string name="odd_week_mode">单周</string>
    <string name="even_week_mode">双周</string>
    <string name="all_weeks_mode">任意周</string>
    <string name="course_num_join_symbol">~</string>
    <string name="course_num">第%1$d节</string>
    <string name="week_day">周%1$s</string>
    <string name="weeks">第%1$s周</string>
    <string name="weeks_odd">第%1$s之单周</string>
    <string name="weeks_even">第%1$s之双周</string>
    <string name="courses">第%1$s节</string>
    <string name="no_data">暂无数据</string>
    <string name="weeks_empty">请设置上课周数！</string>
    <string name="debug">调试</string>
    <string name="debug_mode">调试模式</string>
    <string name="debug_mode_sum">启用调试模式</string>
    <string name="debug_log_catch">日志捕捉</string>
    <string name="debug_log_catch_sum">记录并保存输出的日志</string>
    <string name="crash_record">崩溃记录</string>
    <string name="debug_error_catch">崩溃错误捕捉</string>
    <string name="debug_error_catch_sum">记录并保存导致应用崩溃的错误（建议开启）</string>
    <string name="debug_exception_catch">问题捕捉</string>
    <string name="debug_exception_catch_sum">记录并保存正常运行过程中弹出的错误</string>
    <string name="theme">主题</string>
    <string name="night_mode">夜间模式</string>
    <string name="night_mode_sum">设置并切换到暗色的夜间模式</string>
    <string name="course_table_round_compat">课程表屏幕圆角适配</string>
    <string name="course_table_round_compat_sum">防止圆角屏幕设备上部分内容被遮挡</string>
    <string name="ui">界面</string>
    <string name="more">more</string>
    <string name="default_interface">默认显示界面</string>
    <string name="default_interface_sum">设定启动界面时默认显示的界面</string>
    <string name="force_show_weekend_course">强制显示周末课程</string>
    <string name="force_show_weekend_course_sum">即便没有周末课程时依然显示该空列</string>
    <string name="course_table_cell_same_height">使用相同的课程格高度</string>
    <string name="course_table_cell_same_height_sum">将会以最大的课程格高度为准</string>
    <string name="course_table_cell_center_horizontal_show">水平居中课程格文字</string>
    <string name="course_table_cell_center_horizontal_show_sum">横向居中显示课程格内的文字</string>
    <string name="course_table_style">课程表样式</string>
    <string name="course_cell_style">课程格样式</string>
    <string name="use_browser_open_news_detail">使用浏览器查看详细通知信息</string>
    <string name="use_browser_open_news_detail_sum">使用浏览器代替内置界面打开通知信息</string>
    <string name="update_check">检查更新</string>
    <string name="update_check_sum">立即检查应用程序的更新</string>
    <string name="update_check_settings">更新检查设置</string>
    <string name="auto_update_check">自动检查更新</string>
    <string name="auto_update_check_sum">应用每次启动时自动检查更新</string>
    <string name="clear_logs">清空日志</string>
    <string name="others">其它</string>
    <string name="async_settings">同步设置</string>
    <string name="auto_async_course">每天自动同步课程数据</string>
    <string name="auto_async_course_sum">每天自动从教务同步课程数据</string>
    <string name="auto_async_news_info">启动时自动刷新通知数据</string>
    <string name="auto_async_news_info_sum">每次启动时自动刷新通知数据\n注：首次启动必定刷新</string>
    <string name="expand_course_detail_in_default">默认展开课程详情</string>
    <string name="expand_course_detail_in_default_sum">显示课程详情时默认展开时间列表</string>
    <string name="auto_update_course_arrange">启动时自动更新课程安排</string>
    <string name="auto_update_course_arrange_sum">每次启动时自动更新课程安排\n注：首次启动必定刷新</string>
    <string name="notification">通知</string>
    <string name="notify_before_next_course">启用下一节课的课程通知</string>
    <string name="notify_before_next_course_sum">下课前10分钟通知提示下一节课的课程\n注：需要允许应用自启动</string>
    <string name="other_settings">其它</string>
    <string name="exit_application_directly">返回主界面时直接退出应用</string>
    <string name="exit_application_directly_sum">返回主界面时不隐藏界面而直接退出</string>
    <string name="school_calendar">校历</string>
    <string name="score_query">成绩查询</string>
    <string name="exam_arrange">考试安排</string>
    <string name="level_exam">等级考试</string>
    <string name="use_browser_download_direct_link_update">使用浏览器下载\'直接下载\'的更新</string>
    <string name="use_browser_download_direct_link_update_sum">可以解决无法内部直接下载的问题</string>
    <string name="login_failed_attention">如果您多次登录失败，很可能是由于以下原因：\n1. 学校单点登录服务器错误；\n2. 用户名或密码错误；\n3. APP登录模块过时；\n4. 手机网络连接故障。\n遇到此类问题，您可以更新到最新版本后，自行尝试单点登录系统是否存在异常。若存在问题只能静待校方修复，反之则可以尽快反馈给开发者解决问题。</string>
</resources>