<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/theme">

        <!-- SettingsPref.NightModeType -->
        <androidx.preference.ListPreference
            app:defaultValue="AUTO"
            app:entries="@array/night_mode_text"
            app:entryValues="@array/night_mode_value"
            app:icon="@drawable/ic_night_mode"
            app:key="NightMode"
            app:summary="@string/night_mode_sum"
            app:title="@string/night_mode" />

    </tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory>

    <tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/ui">

        <!-- SettingsPref.EnterInterfaceType -->
        <androidx.preference.ListPreference
            app:defaultValue="COURSE_ARRANGE"
            app:entries="@array/default_interface_text"
            app:entryValues="@array/default_interface_value"
            app:icon="@drawable/ic_default_interface"
            app:key="DefaultEnterInterface"
            app:summary="@string/default_interface_sum"
            app:title="@string/default_interface" />

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_open_in_browser"
            app:key="UseBrowserOpenNewsDetail"
            app:summary="@string/use_browser_open_news_detail_sum"
            app:title="@string/use_browser_open_news_detail" />

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_course_detail_small"
            app:key="ExpandCourseDetailInDefault"
            app:summary="@string/expand_course_detail_in_default_sum"
            app:title="@string/expand_course_detail_in_default" />

    </tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory>

    <tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/notification">

        <androidx.preference.CheckBoxPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_notification"
            app:key="NotifyNextCourse"
            app:summary="@string/notify_before_next_course_sum"
            app:title="@string/notify_before_next_course" />

    </tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory>
</androidx.preference.PreferenceScreen>