<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_groupBase1">
        <item
            android:id="@+id/menu_navCourseArrange"
            android:icon="@drawable/ic_course_list"
            android:title="@string/course_arrange" />

        <item
            android:id="@+id/menu_navNews"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
    </group>

    <group android:id="@+id/menu_groupBase2">
        <item
            android:id="@+id/menu_navCourseTable"
            android:icon="@drawable/ic_table"
            android:title="@string/course_table" />
        <item
            android:id="@+id/menu_navCourseManage"
            android:icon="@drawable/ic_edit"
            android:title="@string/course_manage" />
    </group>

    <group android:id="@+id/menu_groupFunction">
        <item
            android:id="@+id/menu_navSchoolCalendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/school_calendar" />
        <item
            android:id="@+id/menu_navLevelExam"
            android:icon="@drawable/ic_level_exam"
            android:title="@string/level_exam" />
    </group>

    <group android:id="@+id/menu_groupAdvancedFunction">
        <item
            android:id="@+id/menu_navExamArrange"
            android:icon="@drawable/ic_exam"
            android:title="@string/exam_arrange" />
        <item
            android:id="@+id/menu_navScoreQuery"
            android:icon="@drawable/ic_score"
            android:title="@string/score_query" />
    </group>

    <group android:id="@+id/menu_groupOthers">
        <item
            android:id="@+id/menu_navSettings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_navLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/menu_navExit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />
    </group>
</menu>