<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/update_check">

        <androidx.preference.Preference
            app:icon="@drawable/ic_check_update"
            app:key="CheckUpdatesNow"
            app:summary="@string/update_check_sum"
            app:title="@string/update_check" />

    </tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory>

    <tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/update_check_settings">

        <androidx.preference.CheckBoxPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="AutoCheckUpdates"
            app:summary="@string/auto_update_check_sum"
            app:title="@string/auto_update_check" />

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="UseBrowserDownloadDirectLinkUpdate"
            app:summary="@string/use_browser_download_direct_link_update_sum"
            app:title="@string/use_browser_download_direct_link_update" />

    </tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory>
</androidx.preference.PreferenceScreen>