<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/notification">

        <androidx.preference.CheckBoxPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_notification"
            app:key="NotifyNextCourse"
            app:summary="@string/notify_before_next_course_sum"
            app:title="@string/notify_before_next_course" />

    </tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory>

    <tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/other_settings">

        <androidx.preference.CheckBoxPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_exit"
            app:key="ExitApplicationDirectly"
            app:summary="@string/exit_application_directly_sum"
            app:title="@string/exit_application_directly" />

    </tool.xfy9326.naucourse.ui.views.preference.StyledPreferenceCategory>

</androidx.preference.PreferenceScreen>