<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.ErrorActivity">

    <include layout="@layout/view_general_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="40dp"
            android:paddingEnd="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_errorHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/login_failed_attention"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_errUpdateCheck"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/update_check"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:cornerRadius="25dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_errAddQQGroup"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/qq_group_title"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:cornerRadius="25dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_errFeedback"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/online_feedback_back"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:cornerRadius="25dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>